<resources>
    <string name="app_name">Get To Know</string>
    <string name="itemTextViewText">Siemson</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="registerButton">Register</string>
    <string name="loginButton">Login</string>
    <string name="nameHint">name</string>
</resources>
