<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/water"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
        android:drawableStart="@drawable/ic_mail_outline_black_24dp"

        android:hint="@string/email" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/Login2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:enabled="false"
        android:text="@string/loginButton" />

</LinearLayout>