<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/water"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/nameRegister"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:drawableStart="@drawable/ic_person_outline_black_24dp"
        android:hint="@string/nameHint" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <Button
            android:id="@+id/dateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/colorPrimaryDark"
            android:layout_marginLeft="24dp"
            android:hint="Birthday"
            android:textStyle="bold"
            android:background="@drawable/rounded_edittext"/>

    <TextView
        android:id="@+id/dayOfBirthRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="11dp"
        android:hint="AGE"
        android:textSize="20dp"
        android:textStyle="bold"/>
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/radioButtonColor"
            android:text="Male"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/radioButtonColor"
            android:text="Female"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RadioGroup>

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
        android:drawableStart="@drawable/ic_mail_outline_black_24dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Register2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:enabled="false"
        android:text="@string/registerButton" />

</LinearLayout>